--- a/docker/fluentd/Dockerfile
+++ b/docker/fluentd/Dockerfile
@@ -1,8 +1,18 @@
+FROM fluentd:latest AS builder
+
+USER root
+
+RUN apk add ruby-dev make gcc g++
+RUN gem install fluent-plugin-opensearch -v 1.0.7
+RUN gem install fluent-plugin-kubernetes -v 0.3.1
+RUN gem install fluent-plugin-kubernetes_metadata_filter -v 2.11.1
+RUN gem install fluent-plugin-multi-format-parser
+
 FROM fluentd:latest
 
 USER root
 
-RUN gem install fluent-plugin-opensearch fluent-plugin-kubernetes
+COPY --from=builder /usr/lib/ruby/gems/2.7.0/gems /usr/lib/ruby/gems/2.7.0/gems
 
 USER fluent
 
