--- a/config/fluent.conf
+++ b/config/fluent.conf
@@ -5,18 +5,7 @@
   bind 0.0.0.0
 </source>
 
-<source>
-  @type tail
-  @id in_tail_container_logs
-  path /var/log/containers/*.log
-  pos_file /var/log/fluentd-containers.log.pos
-  tag kubernetes.*
-  read_from_head true
-  <parse>
-    @type json
-    time_format %Y-%m-%dT%H:%M:%S.%NZ
-  </parse>
-</source>
+@include kubernetes.conf
 
 <match *.**>
   @type copy
@@ -35,7 +24,12 @@
     include_tag_key true
     type_name access_log
     tag_key @log_name
-    flush_interval 1s
+	buffer_chunk_limit 2M
+    buffer_queue_limit 32
+    flush_interval 5s
+    max_retry_wait 30
+    disable_retry_limit
+    num_threads 8
   </store>
   <store>
     @type stdout
