--- a/config/kubernetes.conf
+++ b/config/kubernetes.conf
@@ -10,3 +10,7 @@
     time_format %Y-%m-%dT%H:%M:%S.%NZ
   </parse>
 </source>
+
+<filter kubernetes.var.log.containers.**.log>
+  @type kubernetes_metadata
+</filter>
