--- a/kubernetes/fluentd-daemonset.yaml
+++ b/kubernetes/fluentd-daemonset.yaml
@@ -20,6 +20,9 @@ spec:
     spec:
       serviceAccount: fluentd
       serviceAccountName: fluentd
+      securityContext:
+        runAsUser: 0
+        runAsGroup: 0
       tolerations:
       # these tolerations are to have the daemonset runnable on control plane nodes
       # remove them if your control plane nodes should not run pods
