--- a/config/kubernetes.conf
+++ b/config/kubernetes.conf
@@ -6,8 +6,20 @@
   tag kubernetes.*
   read_from_head true
   <parse>
-    @type json
-    time_format %Y-%m-%dT%H:%M:%S.%NZ
+    @type multi_format
+    <pattern>
+      format json
+      time_key time
+      time_type string
+      time_format "%Y-%m-%dT%H:%M:%S.%NZ"
+      keep_time_key false
+    </pattern>
+    <pattern>
+      format regexp
+      expression /^(?<time>.+) (?<stream>stdout|stderr)( (?<logtag>.))? (?<log>.*)$/
+      time_format '%Y-%m-%dT%H:%M:%S.%N%:z'
+      keep_time_key false
+    </pattern>
   </parse>
 </source>
 
